--- a/index.html
+++ b/index.html
@@ -13,9 +13,29 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <div class="row">
+            <div class="medium-8 medium-offset-2 column">
+                <h1>Dinoplasty</h1>
+                <form id="dino-form">
+                    <div class="input-group"> 
+                        <input 
+                            type="text"
+                            class="input-group-field" 
+                            name="dinoName"
+                            placeholder="Name a dinosaur"
+                        >
+                        <div class="input-group-button">
+                             <button
+                            class="button success" 
+                            type="submit"
+                        >
+                            Add dino
+                        </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
         
         <script src="app.js"></script>
     </body>
