--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                             type="text"
                             class="input-group-field" 
                             name="dinoName"
+                            id="dino-name"
                             placeholder="Name a dinosaur"
                         >
                         <div class="input-group-button">
