Require dino name in form

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                             name="dinoName"
                             id="dino-name"
                             placeholder="Name a dinosaur"
+                            required
                         >
                         <div class="input-group-button">
                              <button
