--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                             type="text"
                             class="input-group-field" 
                             name="dinoName"
-                            id="dino-name"
                             placeholder="Name a dinosaur"
                             required
+                            autofocus
                         >
                         <div class="input-group-button">
                              <button
