--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="row">
-            <div class="medium-6 medium-offset-3 column">
+            <div class="medium-8 medium-offset-2 column">
                 <h1>Dinoplasty</h1>
                 <form id="dino-form">
                     <div class="input-group"> 
@@ -27,20 +27,29 @@
                             required
                             autofocus
                         >
-                        <div class="input-group-button">
-                             <button
-                            class="button success" 
-                            type="submit"
+
+                         <input 
+                            type="text"
+                            class="input-group-field" 
+                            name="dinoEra"
+                            placeholder="What is the era it lived in?"
+                            required
                         >
+                  
+                        <div class="input-group-button">
+                            <button
+                            class="button" 
+                            type="submit"
+                            >   
                             Add dino
-                        </button>
+                            </button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
         <div class="row">
-            <div class="medium-8 medium-offset-2 column">
+            <div class="medium-10 medium-offset-1 column">
                 <ul id="dino-list">
 
                 </ul>
