Fix button hovering

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             type="text"
                             class="input-group-field" 
                             name="dinoEra"
-                            placeholder="What is the era it lived in?"
+                            placeholder="What era did it live in?"
                             required
                         >
                   
